apps/hello-svc/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello-svc
spec:
  selector:
    app: hello-svc
  ports:
    - name: http
      port: 8000
      targetPort: 8000
